--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -20,26 +20,33 @@
 
 <section class="content" id="home-content">
     <div class="container">
-        <h1>Hi, I like creating things.</h1>
-        <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since. </p>
+        <section class="home-content__about">
+            <h1>Hi, I like creating things.</h1>
+            <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since. </p>
+        </section>
 
-        <h2>Work</h2>
+        <section class="home-content__gallery">
+            <h2>Work</h2>
 
-        <div class="portfolio">
-            <div class="portfolio__item">
+            <div class="portfolio">
+                <div class="portfolio__item">
+                </div>
+                <div class="portfolio__item">
+                </div>
+                <div class="portfolio__item">
+                </div>
+                <div class="portfolio__item">
+                </div>
+                <div class="portfolio__item">
+                </div>
+                <div class="portfolio__item">
+                </div>
             </div>
-            <div class="portfolio__item">
-            </div>
-            <div class="portfolio__item">
-            </div>
-            <div class="portfolio__item">
-            </div>
-            <div class="portfolio__item">
-            </div>
-            <div class="portfolio__item">
-            </div>
-        </div>
+        </section>
 
-        <h2>Lab</h2>
+        <section class="home-content__gallery">
+            <h2>Lab</h2>
+
+        </section>
     </div>
 </section>
