Tweak grid items

--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -22,7 +22,8 @@
     <div class="container">
         <section class="home-content__about">
             <h1>Hi, I like creating things.</h1>
-            <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since. </p>
+
+            <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since.</p>
         </section>
 
         <section class="home-content__gallery">
@@ -30,16 +31,33 @@
 
             <div class="portfolio">
                 <div class="portfolio__item">
+                    <div class="portfolio__item--image"></div>
+                    <p class="portfolio__item--title">Title</p>
                 </div>
+
                 <div class="portfolio__item">
+                    <div class="portfolio__item--image"></div>
+                    <p class="portfolio__item--title">Title</p>
                 </div>
+
                 <div class="portfolio__item">
+                    <div class="portfolio__item--image"></div>
+                    <p class="portfolio__item--title">Title</p>
                 </div>
+
                 <div class="portfolio__item">
+                    <div class="portfolio__item--image"></div>
+                    <p class="portfolio__item--title">Title</p>
                 </div>
+
                 <div class="portfolio__item">
+                    <div class="portfolio__item--image"></div>
+                    <p class="portfolio__item--title">Title</p>
                 </div>
+
                 <div class="portfolio__item">
+                    <div class="portfolio__item--image"></div>
+                    <p class="portfolio__item--title">Title</p>
                 </div>
             </div>
         </section>
