--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -302,15 +302,17 @@ a {
 .portfolio__item {
     display: inline-block;
     font-size: 1rem;
-    height: 300px;
     margin: (10% / 6);
     width: 30%;
-
-    &:nth-child(odd) {
-        background-color: $green;
-    }
-
-    &:nth-child(even) {
-        background-color: $blue;
-    }
 }
+
+    .portfolio__item--image {
+        background-color: $green;
+        height: 250px;
+        width: 100%;
+    }
+
+    .portfolio__item--title {
+        margin-top: 0.5em;
+        text-align: left;
+    }
