--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -7,26 +7,25 @@
 
     <div class="header__card header__card--right">
         <div class="header__card__content header__card__links">
-            <a href="https://www.linkedin.com/in/arkon94">LinkedIn</a>
-            <a href="https://github.com/arkon">GitHub</a>
-            <a href="http://www.dribbble.com/arkon">Dribbble</a>
-            <a href="mailto:ey.cheung@outlook.com">Email</a>
+            <a href="#home-about">About</a>
+            <a href="#home-work">Work</a>
+            <a href="#footer-contact">Contact</a>
         </div>
     </div>
 
     <p class="header__bgtext">Developer + Designer</p>
-    <a class="header__more" href="#home-content" title="Learn more">↓</a>
+    <!-- <a class="header__more" href="#home-content" title="Learn more">↓</a> -->
 </header>
 
-<section class="content" id="home-content">
+<section class="content">
     <div class="container">
-        <section class="home-content__about">
+        <section class="home-content__about" id="home-about">
             <h1>Hi, I like creating things.</h1>
 
             <p>I’m a student at University of Toronto St. George studying to get a BSc. with a specialization in Computer Science. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since.</p>
         </section>
 
-        <section class="home-content__gallery">
+        <section class="home-content__gallery" id="home-work">
             <h2>Work</h2>
 
             <div class="portfolio">
@@ -60,11 +59,6 @@
                     <p class="portfolio__item--title">Title</p>
                 </div>
             </div>
-        </section>
-
-        <section class="home-content__gallery">
-            <h2>Lab</h2>
-
         </section>
     </div>
 </section>
