--- a/_harp/_partials/head.ejs
+++ b/_harp/_partials/head.ejs
@@ -3,7 +3,7 @@
 
 <title>Eugene Cheung</title>
 
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/css/main.css">
 <link rel="icon" type="image/png" href="/images/icon.png">
