Improve portfolio scroll top boundary

--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -303,7 +303,8 @@ h3 {
 }
 
 .home-content__gallery {
-    margin-top: 4em;
+    margin-top: 1em;
+    padding-top: 3em;
     position: relative;
     text-align: center;
 
@@ -313,7 +314,7 @@ h3 {
         height: 1px;
         left: 0;
         position: absolute;
-        top: 1em;
+        top: 4em;
         width: 100%;
     }
 
