--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -208,34 +208,11 @@ h3 {
     }
 }
 
-.header__more {
-    animation: anim-slide-down 0.3s ease-out 1s forwards;
-    background-color: $grey;
-    border: 0;
-    border-radius: 50%;
-    bottom: -1em;
-    color: $blue;
-    display: inline-block;
-    height: 2em;
-    left: 50%;
-    line-height: 1.75em;
-    margin-left: -1em;
-    opacity: 0;
-    position: absolute;
-    text-align: center;
-    transition: box-shadow 0.5s;
-    width: 2em;
-
-    &:hover {
-        box-shadow: 0 1px 3px rgba($black, 0.5);
-    }
-}
-
 
 // Main content
 
 .content {
-    background-color: $grey;
+    background: $grey url('/images/squairy_light.png');
     flex: 1 0 auto;
 
     h1,
@@ -312,10 +289,10 @@ h3 {
         background-color: $blue;
         content: '';
         height: 1px;
-        left: 0;
+        left: 20%;
         position: absolute;
         top: 4em;
-        width: 100%;
+        width: 60%;
     }
 
     h2 {
@@ -323,7 +300,7 @@ h3 {
         display: inline-block;
         font-size: 2em;
         line-height: 1;
-        margin: 0 auto 1em;
+        margin: 0 auto;
         padding: 0 1em;
         position: relative;
         z-index: 10;
@@ -334,24 +311,48 @@ h3 {
 // Portfolio overview
 
 .portfolio {
-    font-size: 0;
+    text-align: left;
 }
 
 .portfolio__item {
-    display: inline-block;
-    font-size: 1rem;
-    margin: 1em 0;
-    vertical-align: top;
-    width: (100% / 3);
+    background-color: rgba($white, 0.75);
+    border: 1px solid lighten($blue, 30%);
+    border-radius: $radius;
+    margin: 2em 0;
+    padding: 1em;
+    transition: border 0.3s, box-shadow 0.5s;
+    width: 100%;
+
+    &:hover {
+        border-color: $blue;
+        box-shadow: 0 0.25em 0.5em rgba($black, 0.15);
+    }
 }
 
     .portfolio__item--image {
         background: linear-gradient(235deg, $blue, $green);
+        display: inline-block;
         height: 250px;
-        width: 100%;
+        vertical-align: top;
+        width: 350px;
     }
 
-    .portfolio__item--title {
-        margin-top: 0.5em;
-        text-align: left;
+    .portfolio__item--description {
+        display: inline-block;
+        margin-left: 1em;
+        vertical-align: top;
     }
+
+        .portfolio__item--title {
+            font-size: 1.75em;
+        }
+
+        .portfolio__item--tags {
+            margin-bottom: 1em;
+
+            span {
+                background-color: $grey;
+                border-radius: $radius;
+                padding: 0.25em 0.5em;
+            }
+        }
