--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -293,6 +293,11 @@ h3 {
         position: absolute;
         top: 4em;
         width: 60%;
+
+        @media (max-width: 750px) {
+            left: 0;
+            width: 100%;
+        }
     }
 
     h2 {
@@ -333,12 +338,21 @@ h3 {
     .portfolio__item--image,
     .portfolio__item--description {
         display: table-cell;
+
+        @media (max-width: 750px) {
+            display: block;
+        }
     }
 
     .portfolio__item--image {
         // background: linear-gradient(235deg, $blue, $green);
         vertical-align: middle;
         width: 250px;
+
+        @media (max-width: 750px) {
+            text-align: center;
+            width: 100%;
+        }
 
         img {
             height: 187px;
@@ -347,8 +361,12 @@ h3 {
     }
 
     .portfolio__item--description {
-        padding-left: 1em;
+        padding-left: 1.5em;
         vertical-align: top;
+
+        @media (max-width: 750px) {
+            padding: 0 0.5em;
+        }
     }
 
         .portfolio__item--title {
@@ -372,8 +390,8 @@ h3 {
             border-radius: $radius;
             color: $blue;
             display: inline-block;
-            margin: 1em 0;
-            padding: 0.5em 1em;
+            margin: 1em 0 0 -0.5em;
+            padding: 0.5em;
             text-transform: uppercase;
             transition: box-shadow 0.3s, color 0.3s;
 
