--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -16,7 +16,7 @@
     <p class="header__bgtext">Developer + Designer</p>
 </header>
 
-<section class="content">
+<main class="content">
     <div class="container">
         <section class="home-content__about" id="home-about">
             <h1>Hi, I like creating things.</h1>
@@ -53,4 +53,4 @@
             </div>
         </section>
     </div>
-</section>
+</main>
