--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -318,86 +318,53 @@ h3 {
 // Portfolio overview
 
 .portfolio {
-    text-align: left;
+    font-size: 0;
+    margin: 2rem auto;
 }
 
 .portfolio__item {
-    background-color: rgba($white, 0.75);
-    border: 1px solid lighten($blue, 30%);
-    border-radius: $radius;
-    display: table;
-    margin: 2em 0;
-    padding: 1em;
-    transition: border 0.3s, box-shadow 0.5s;
+    display: inline-block;
+    font-size: 1rem;
+    height: 187px;
+    max-width: 250px;
+    overflow: hidden;
+    position: relative;
+    transition: box-shadow 0.3s;
     width: 100%;
 
     &:hover {
-        border-color: $blue;
-        box-shadow: 0 0.25em 0.5em rgba($black, 0.15);
+        box-shadow: 0 0 0.75em rgba($black, 0.85);
+        z-index: 100;
+
+        .portfolio__item--description {
+            transform: translateY(0);
+        }
     }
 }
 
-    .portfolio__item--image,
-    .portfolio__item--description {
-        display: table-cell;
-
-        @media (max-width: 750px) {
-            display: block;
-        }
-    }
-
     .portfolio__item--image {
-        // background: linear-gradient(235deg, $blue, $green);
-        vertical-align: middle;
-        width: 250px;
-
-        @media (max-width: 750px) {
-            text-align: center;
-            width: 100%;
-        }
-
-        img {
-            height: 187px;
-            width: 250px;
-        }
+        width: 100%;
     }
 
     .portfolio__item--description {
-        padding-left: 1.5em;
-        vertical-align: top;
-
-        @media (max-width: 750px) {
-            padding: 0 0.5em;
-        }
+        background: rgba($black, 0.85);
+        border: none;
+        bottom: 0;
+        color: $white;
+        left: 0;
+        padding: 1em;
+        position: absolute;
+        right: 0;
+        text-align: left;
+        top: 0;
+        transform: translateY(100%);
+        transition: transform 0.25s ease-out;
     }
 
         .portfolio__item--title {
-            font-size: 1.75em;
+            border-bottom: 1px dashed $white;
+            font-size: 1.25em;
+            margin-bottom: 0.5em;
+            padding-bottom: 0.5em;
             text-transform: none;
-        }
-
-        .portfolio__item--tags {
-            border-bottom: 1px dashed $black;
-            margin-bottom: 1em;
-            padding-bottom: 1em;
-
-            span {
-                background-color: $grey;
-                border-radius: $radius;
-                padding: 0.25em 0.5em;
-            }
-        }
-
-        .portfolio__item--link {
-            border-radius: $radius;
-            color: $blue;
-            display: inline-block;
-            margin: 1em 0 0 -0.5em;
-            padding: 0.5em;
-            text-transform: uppercase;
-            transition: box-shadow 0.3s, color 0.3s;
-
-            &:hover {
-                box-shadow: 0 3px 8px rgba($black, 0.5);
-            }
         }
