--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -329,12 +329,24 @@ h3 {
     max-width: 250px;
     overflow: hidden;
     position: relative;
-    transition: box-shadow 0.3s;
     width: 100%;
 
-    &:hover {
+    &::after {
         box-shadow: 0 0 0.75em rgba($black, 0.85);
-        z-index: 100;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        transition: opacity 0.3s;
+        width: 100%;
+    }
+
+    &:hover {
+        &::after {
+            opacity: 1;
+            z-index: 100;
+        }
 
         .portfolio__item--description {
             transform: translateY(0);
