--- a/_harp/_partials/head.ejs
+++ b/_harp/_partials/head.ejs
@@ -1,9 +1,9 @@
 <meta charset="UTF-8">
-<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+<meta name="viewport" content="initial-scale=1.0, width=device-width">
 
 <title>Eugene Cheung</title>
 
-<link href='http://fonts.googleapis.com/css?family=Dosis:300' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="/css/main.css">
-<link rel="icon" type="image/png" href="/images/icon.png">
+<link href="http://fonts.googleapis.com/css?family=Dosis:300" rel="stylesheet">
+<link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/images/icon.png" rel="icon" type="image/png">
