--- a/_harp/css/main.scss
+++ b/_harp/css/main.scss
@@ -33,7 +33,8 @@ body {
 }
 
 a {
-    border-bottom: 1px dotted $white;
+    border-bottom: 1px dotted $blue;
+    color: $blue;
     text-decoration: none;
 }
 
@@ -244,6 +245,10 @@ h3 {
     .container {
         padding-bottom: 1em;
         padding-top: 3em;
+    }
+
+    a:hover {
+        transform: translateY(-1px);
     }
 }
 
