Fixes from master

--- a/_harp/_layout.ejs
+++ b/_harp/_layout.ejs
@@ -11,7 +11,7 @@
             <a class="btn-pill" href="mailto:ey.cheung@outlook.com">Email me</a>
 
             <div class="footer__social">
-                <a href="https://www.linkedin.com/in/arkon94">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/echeung94">LinkedIn</a>
                 <a href="https://github.com/arkon">GitHub</a>
                 <a href="http://www.dribbble.com/arkon">Dribbble</a>
             </div>
