--- a/_harp/_partials/head.ejs
+++ b/_harp/_partials/head.ejs
@@ -3,7 +3,7 @@
 
 <title>Eugene Cheung</title>
 
-<link href="http://fonts.googleapis.com/css?family=Dosis:300" rel="stylesheet">
-<link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dosis:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
 <link href="/images/icon.png" rel="icon" type="image/png">
