Remove some old stuff

--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -21,7 +21,7 @@
         <section class="home-content__about" id="home-about">
             <h1>Hi, I like creating things.</h1>
 
-            <p>I’m currently an SDE at <a href="https://www.amazon.com/">Amazon</a>. I got my B.Sc with a specialization in Computer Science at <a href="https://www.utoronto.ca/">University of Toronto St. George</a>. I began teaching myself about design and programming at the age of 12, and I've loved crafting beautiful creations ever since.</p>
+            <p>I’m currently an SDE at <a href="https://www.amazon.com/">Amazon</a>. I got my B.Sc with a specialization in Computer Science at <a href="https://www.utoronto.ca/">University of Toronto St. George</a>.</p>
         </section>
 
         <section class="home-content__gallery" id="home-work">
