--- a/_harp/index.ejs
+++ b/_harp/index.ejs
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <p class="header__bgtext">Developer + Designer</p>
+    <p class="header__bgtext">Software Developer</p>
 </header>
 
 <main class="content">
@@ -41,6 +41,8 @@
                     </div>
                 <% } %>
             </div>
+
+            <p>See more on <a href="https://github.com/arkon?tab=repositories">GitHub</a>.</p>
         </section>
     </div>
 </main>
